add freq na elaboração das tabelas dos harmonicos

--- a/scripts/T_tide.ipynb
+++ b/scripts/T_tide.ipynb
@@ -10,9 +10,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\216606\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\pcce-tides-iU3Jyl7S-py3.10\\lib\\site-packages\\utide\\harmonics.py:16: RuntimeWarning: invalid value encountered in cast\n",
+      "/home/gustavo/.cache/pypoetry/virtualenvs/pcce-tides-tPVxqpqz-py3.8/lib/python3.8/site-packages/utide/harmonics.py:16: RuntimeWarning: invalid value encountered in cast\n",
       "  nshallow = np.ma.masked_invalid(const.nshallow).astype(int)\n",
-      "C:\\Users\\216606\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\pcce-tides-iU3Jyl7S-py3.10\\lib\\site-packages\\utide\\harmonics.py:17: RuntimeWarning: invalid value encountered in cast\n",
+      "/home/gustavo/.cache/pypoetry/virtualenvs/pcce-tides-tPVxqpqz-py3.8/lib/python3.8/site-packages/utide/harmonics.py:17: RuntimeWarning: invalid value encountered in cast\n",
       "  ishallow = np.ma.masked_invalid(const.ishallow).astype(int) - 1\n"
      ]
     }
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import utide"
+    "#import utide"
    ]
   },
   {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c60bf524",
    "metadata": {},
    "outputs": [],
@@ -162,13 +162,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "2bfd84ea",
    "metadata": {},
    "outputs": [],
    "source": [
     "def T_tide(time:np.datetime64, c:np.asarray):\n",
-    "    \n",
+    "    global coef\n",
     "    coef = solve(time, c,\n",
     "                 lat=-3,\n",
     "                 nodal=False,\n",
@@ -177,14 +177,14 @@
     "                 conf_int='linear',\n",
     "                 Rayleigh_min=0.95,)\n",
     "    \n",
-    "    print('\\n Name \\t Amp \\t Phase \\t PE \\t SNR ')\n",
-    "    for name, amp, phase, pe, snr in zip(coef.name, coef.A, coef.g, coef.PE, coef.SNR):\n",
-    "        print(' {} \\t {:.2f} \\t {:.1f} \\t {:.2f} \\t {:.2f} '.format(name, amp, phase, pe, snr))"
+    "    print('Name\\tAmp\\tPhase\\tFreq\\tPE\\tSNR\\t')\n",
+    "    for name, amp, phase, frq ,pe, snr in zip(coef.name, coef.A, coef.g, coef.aux.frq ,coef.PE, coef.SNR):\n",
+    "        print(' {}\\t{:.2f}\\t{:.1f}\\t{:.4f}\\t{:.2f}\\t {:.2f}\\t'.format(name, amp, phase, frq, pe, snr))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "9d69a1d2",
    "metadata": {
     "scrolled": false
@@ -195,119 +195,116 @@
      "output_type": "stream",
      "text": [
       "solve: matrix prep ... solution ... done.\n",
-      "\n",
-      " Name \t Amp \t Phase \t PE \t SNR \n",
-      " M2 \t 7.52 \t 317.6 \t 78.33 \t 3588.95 \n",
-      " S2 \t 2.26 \t 330.2 \t 7.07 \t 323.92 \n",
-      " MM \t 2.19 \t 198.2 \t 6.64 \t 43.58 \n",
-      " N2 \t 1.41 \t 301.3 \t 2.74 \t 125.59 \n",
-      " K1 \t 1.01 \t 263.2 \t 1.41 \t 53.70 \n",
-      " MSF \t 0.67 \t 202.6 \t 0.62 \t 4.05 \n",
-      " NO1 \t 0.62 \t 330.9 \t 0.53 \t 20.28 \n",
-      " MK3 \t 0.44 \t 224.4 \t 0.27 \t 33.11 \n",
-      " 2SK5 \t 0.43 \t 258.3 \t 0.26 \t 73.13 \n",
-      " MU2 \t 0.41 \t 13.9 \t 0.23 \t 10.60 \n",
-      " MN4 \t 0.38 \t 220.7 \t 0.20 \t 42.98 \n",
-      " M4 \t 0.32 \t 179.1 \t 0.14 \t 31.80 \n",
-      " ETA2 \t 0.31 \t 79.6 \t 0.14 \t 6.22 \n",
-      " S4 \t 0.31 \t 43.2 \t 0.13 \t 29.40 \n",
-      " 2Q1 \t 0.30 \t 48.5 \t 0.13 \t 4.78 \n",
-      " SN4 \t 0.30 \t 190.7 \t 0.12 \t 27.45 \n",
-      " 2MN6 \t 0.28 \t 47.7 \t 0.11 \t 32.50 \n",
-      " M3 \t 0.28 \t 315.0 \t 0.11 \t 13.13 \n",
-      " Q1 \t 0.27 \t 200.4 \t 0.10 \t 3.97 \n",
-      " MO3 \t 0.27 \t 149.9 \t 0.10 \t 12.72 \n",
-      " OO1 \t 0.27 \t 262.1 \t 0.10 \t 3.81 \n",
-      " O1 \t 0.26 \t 82.4 \t 0.09 \t 3.58 \n",
-      " ALP1 \t 0.24 \t 280.5 \t 0.08 \t 3.09 \n",
-      " MS4 \t 0.23 \t 130.8 \t 0.08 \t 16.79 \n",
-      " UPS1 \t 0.23 \t 240.1 \t 0.07 \t 2.75 \n",
-      " J1 \t 0.20 \t 49.1 \t 0.06 \t 2.17 \n",
-      " M6 \t 0.18 \t 37.5 \t 0.04 \t 12.85 \n",
-      " 2MS6 \t 0.15 \t 77.0 \t 0.03 \t 9.55 \n",
-      " 2SM6 \t 0.10 \t 137.8 \t 0.02 \t 4.39 \n",
-      " M8 \t 0.10 \t 21.4 \t 0.01 \t 7.62 \n",
-      " SK3 \t 0.08 \t 218.9 \t 0.01 \t 1.04 \n",
-      " EPS2 \t 0.07 \t 139.4 \t 0.01 \t 0.36 \n",
-      " L2 \t 0.07 \t 80.8 \t 0.01 \t 0.35 \n",
-      " 3MK7 \t 0.05 \t 192.6 \t 0.00 \t 1.09 \n",
-      " 2MK5 \t 0.04 \t 84.0 \t 0.00 \t 0.71 \n",
+      "Name\tAmp\tPhase\tFreq\tPE\tSNR\t\n",
+      " M2\t7.52\t317.6\t0.0805\t78.33\t 3588.95\t\n",
+      " S2\t2.26\t330.2\t0.0833\t7.07\t 323.92\t\n",
+      " MM\t2.19\t198.2\t0.0015\t6.64\t 43.58\t\n",
+      " N2\t1.41\t301.3\t0.0790\t2.74\t 125.59\t\n",
+      " K1\t1.01\t263.2\t0.0418\t1.41\t 53.70\t\n",
+      " MSF\t0.67\t202.6\t0.0028\t0.62\t 4.05\t\n",
+      " NO1\t0.62\t330.9\t0.0403\t0.53\t 20.28\t\n",
+      " MK3\t0.44\t224.4\t0.1223\t0.27\t 33.11\t\n",
+      " 2SK5\t0.43\t258.3\t0.2084\t0.26\t 73.13\t\n",
+      " MU2\t0.41\t13.9\t0.0777\t0.23\t 10.60\t\n",
+      " MN4\t0.38\t220.7\t0.1595\t0.20\t 42.98\t\n",
+      " M4\t0.32\t179.1\t0.1610\t0.14\t 31.80\t\n",
+      " ETA2\t0.31\t79.6\t0.0851\t0.14\t 6.22\t\n",
+      " S4\t0.31\t43.2\t0.1667\t0.13\t 29.40\t\n",
+      " 2Q1\t0.30\t48.5\t0.0357\t0.13\t 4.78\t\n",
+      " SN4\t0.30\t190.7\t0.1623\t0.12\t 27.45\t\n",
+      " 2MN6\t0.28\t47.7\t0.2400\t0.11\t 32.50\t\n",
+      " M3\t0.28\t315.0\t0.1208\t0.11\t 13.13\t\n",
+      " Q1\t0.27\t200.4\t0.0372\t0.10\t 3.97\t\n",
+      " MO3\t0.27\t149.9\t0.1192\t0.10\t 12.72\t\n",
+      " OO1\t0.27\t262.1\t0.0448\t0.10\t 3.81\t\n",
+      " O1\t0.26\t82.4\t0.0387\t0.09\t 3.58\t\n",
+      " ALP1\t0.24\t280.5\t0.0344\t0.08\t 3.09\t\n",
+      " MS4\t0.23\t130.8\t0.1638\t0.08\t 16.79\t\n",
+      " UPS1\t0.23\t240.1\t0.0463\t0.07\t 2.75\t\n",
+      " J1\t0.20\t49.1\t0.0433\t0.06\t 2.17\t\n",
+      " M6\t0.18\t37.5\t0.2415\t0.04\t 12.85\t\n",
+      " 2MS6\t0.15\t77.0\t0.2444\t0.03\t 9.55\t\n",
+      " 2SM6\t0.10\t137.8\t0.2472\t0.02\t 4.39\t\n",
+      " M8\t0.10\t21.4\t0.3220\t0.01\t 7.62\t\n",
+      " SK3\t0.08\t218.9\t0.1251\t0.01\t 1.04\t\n",
+      " EPS2\t0.07\t139.4\t0.0762\t0.01\t 0.36\t\n",
+      " L2\t0.07\t80.8\t0.0820\t0.01\t 0.35\t\n",
+      " 3MK7\t0.05\t192.6\t0.2833\t0.00\t 1.09\t\n",
+      " 2MK5\t0.04\t84.0\t0.2028\t0.00\t 0.71\t\n",
       "solve: matrix prep ... solution ... done.\n",
-      "\n",
-      " Name \t Amp \t Phase \t PE \t SNR \n",
-      " M2 \t 7.82 \t 315.2 \t 82.10 \t 4114.04 \n",
-      " S2 \t 2.76 \t 333.4 \t 10.24 \t 512.95 \n",
-      " N2 \t 1.61 \t 288.8 \t 3.47 \t 174.42 \n",
-      " MM \t 0.86 \t 213.7 \t 1.00 \t 22.86 \n",
-      " NO1 \t 0.63 \t 5.6 \t 0.53 \t 30.91 \n",
-      " Q1 \t 0.58 \t 254.6 \t 0.45 \t 25.73 \n",
-      " K1 \t 0.56 \t 326.3 \t 0.41 \t 23.90 \n",
-      " MS4 \t 0.37 \t 155.8 \t 0.19 \t 26.58 \n",
-      " M4 \t 0.36 \t 163.9 \t 0.17 \t 24.61 \n",
-      " OO1 \t 0.32 \t 119.3 \t 0.14 \t 8.12 \n",
-      " MSF \t 0.31 \t 340.1 \t 0.13 \t 2.94 \n",
-      " M3 \t 0.29 \t 326.1 \t 0.11 \t 20.84 \n",
-      " MN4 \t 0.29 \t 174.3 \t 0.11 \t 16.01 \n",
-      " O1 \t 0.29 \t 316.8 \t 0.11 \t 6.45 \n",
-      " EPS2 \t 0.26 \t 288.2 \t 0.09 \t 4.66 \n",
-      " 2SM6 \t 0.25 \t 176.1 \t 0.08 \t 26.26 \n",
-      " ALP1 \t 0.24 \t 56.2 \t 0.08 \t 4.56 \n",
-      " 2Q1 \t 0.23 \t 66.4 \t 0.07 \t 3.97 \n",
-      " M8 \t 0.22 \t 331.6 \t 0.06 \t 40.22 \n",
-      " 2MS6 \t 0.21 \t 89.2 \t 0.06 \t 18.26 \n",
-      " J1 \t 0.19 \t 125.7 \t 0.05 \t 2.83 \n",
-      " MK3 \t 0.17 \t 218.4 \t 0.04 \t 6.87 \n",
-      " 2MK5 \t 0.17 \t 147.5 \t 0.04 \t 12.09 \n",
-      " SN4 \t 0.17 \t 203.8 \t 0.04 \t 5.24 \n",
-      " 2MN6 \t 0.16 \t 166.7 \t 0.04 \t 11.61 \n",
-      " SK3 \t 0.15 \t 335.1 \t 0.03 \t 5.79 \n",
-      " UPS1 \t 0.15 \t 264.0 \t 0.03 \t 1.72 \n",
-      " ETA2 \t 0.15 \t 111.0 \t 0.03 \t 1.49 \n",
-      " 2SK5 \t 0.15 \t 265.3 \t 0.03 \t 9.48 \n",
-      " M6 \t 0.12 \t 43.0 \t 0.02 \t 6.64 \n",
-      " L2 \t 0.12 \t 75.5 \t 0.02 \t 0.90 \n",
-      " S4 \t 0.11 \t 222.2 \t 0.02 \t 2.29 \n",
-      " MU2 \t 0.09 \t 346.3 \t 0.01 \t 0.59 \n",
-      " 3MK7 \t 0.07 \t 134.6 \t 0.01 \t 3.49 \n",
-      " MO3 \t 0.05 \t 97.9 \t 0.00 \t 0.51 \n",
+      "Name\tAmp\tPhase\tFreq\tPE\tSNR\t\n",
+      " M2\t7.82\t315.2\t0.0805\t82.10\t 4114.04\t\n",
+      " S2\t2.76\t333.4\t0.0833\t10.24\t 512.95\t\n",
+      " N2\t1.61\t288.8\t0.0790\t3.47\t 174.42\t\n",
+      " MM\t0.86\t213.7\t0.0015\t1.00\t 22.86\t\n",
+      " NO1\t0.63\t5.6\t0.0403\t0.53\t 30.91\t\n",
+      " Q1\t0.58\t254.6\t0.0372\t0.45\t 25.73\t\n",
+      " K1\t0.56\t326.3\t0.0418\t0.41\t 23.90\t\n",
+      " MS4\t0.37\t155.8\t0.1638\t0.19\t 26.58\t\n",
+      " M4\t0.36\t163.9\t0.1610\t0.17\t 24.61\t\n",
+      " OO1\t0.32\t119.3\t0.0448\t0.14\t 8.12\t\n",
+      " MSF\t0.31\t340.1\t0.0028\t0.13\t 2.94\t\n",
+      " M3\t0.29\t326.1\t0.1208\t0.11\t 20.84\t\n",
+      " MN4\t0.29\t174.3\t0.1595\t0.11\t 16.01\t\n",
+      " O1\t0.29\t316.8\t0.0387\t0.11\t 6.45\t\n",
+      " EPS2\t0.26\t288.2\t0.0762\t0.09\t 4.66\t\n",
+      " 2SM6\t0.25\t176.1\t0.2472\t0.08\t 26.26\t\n",
+      " ALP1\t0.24\t56.2\t0.0344\t0.08\t 4.56\t\n",
+      " 2Q1\t0.23\t66.4\t0.0357\t0.07\t 3.97\t\n",
+      " M8\t0.22\t331.6\t0.3220\t0.06\t 40.22\t\n",
+      " 2MS6\t0.21\t89.2\t0.2444\t0.06\t 18.26\t\n",
+      " J1\t0.19\t125.7\t0.0433\t0.05\t 2.83\t\n",
+      " MK3\t0.17\t218.4\t0.1223\t0.04\t 6.87\t\n",
+      " 2MK5\t0.17\t147.5\t0.2028\t0.04\t 12.09\t\n",
+      " SN4\t0.17\t203.8\t0.1623\t0.04\t 5.24\t\n",
+      " 2MN6\t0.16\t166.7\t0.2400\t0.04\t 11.61\t\n",
+      " SK3\t0.15\t335.1\t0.1251\t0.03\t 5.79\t\n",
+      " UPS1\t0.15\t264.0\t0.0463\t0.03\t 1.72\t\n",
+      " ETA2\t0.15\t111.0\t0.0851\t0.03\t 1.49\t\n",
+      " 2SK5\t0.15\t265.3\t0.2084\t0.03\t 9.48\t\n",
+      " M6\t0.12\t43.0\t0.2415\t0.02\t 6.64\t\n",
+      " L2\t0.12\t75.5\t0.0820\t0.02\t 0.90\t\n",
+      " S4\t0.11\t222.2\t0.1667\t0.02\t 2.29\t\n",
+      " MU2\t0.09\t346.3\t0.0777\t0.01\t 0.59\t\n",
+      " 3MK7\t0.07\t134.6\t0.2833\t0.01\t 3.49\t\n",
+      " MO3\t0.05\t97.9\t0.1192\t0.00\t 0.51\t\n",
       "solve: matrix prep ... solution ... done.\n",
-      "\n",
-      " Name \t Amp \t Phase \t PE \t SNR \n",
-      " K1 \t 7.27 \t 55.2 \t 32.37 \t 275.53 \n",
-      " MM \t 4.29 \t 24.5 \t 11.26 \t 8.58 \n",
-      " S2 \t 4.14 \t 14.9 \t 10.48 \t 81.73 \n",
-      " M2 \t 4.03 \t 315.4 \t 9.94 \t 77.41 \n",
-      " NO1 \t 3.05 \t 112.9 \t 5.68 \t 48.23 \n",
-      " MSF \t 2.44 \t 299.1 \t 3.65 \t 2.78 \n",
-      " SK3 \t 2.32 \t 319.1 \t 3.29 \t 68.39 \n",
-      " J1 \t 2.15 \t 307.8 \t 2.82 \t 24.00 \n",
-      " 2Q1 \t 1.97 \t 198.4 \t 2.37 \t 20.16 \n",
-      " L2 \t 1.90 \t 211.9 \t 2.21 \t 17.14 \n",
-      " UPS1 \t 1.82 \t 306.7 \t 2.03 \t 17.28 \n",
-      " N2 \t 1.80 \t 271.2 \t 1.98 \t 15.38 \n",
-      " Q1 \t 1.64 \t 45.6 \t 1.65 \t 14.09 \n",
-      " EPS2 \t 1.53 \t 288.8 \t 1.44 \t 11.19 \n",
-      " ETA2 \t 1.48 \t 331.0 \t 1.35 \t 10.51 \n",
-      " O1 \t 1.19 \t 260.2 \t 0.86 \t 7.37 \n",
-      " MK3 \t 1.14 \t 334.6 \t 0.80 \t 16.64 \n",
-      " S4 \t 1.10 \t 296.8 \t 0.73 \t 18.01 \n",
-      " 2SM6 \t 1.05 \t 177.5 \t 0.67 \t 30.34 \n",
-      " MN4 \t 1.00 \t 253.2 \t 0.62 \t 15.09 \n",
-      " MU2 \t 0.89 \t 300.4 \t 0.49 \t 3.81 \n",
-      " ALP1 \t 0.86 \t 230.2 \t 0.45 \t 3.83 \n",
-      " MO3 \t 0.85 \t 170.1 \t 0.44 \t 9.25 \n",
-      " M3 \t 0.83 \t 84.4 \t 0.42 \t 8.74 \n",
-      " 2MS6 \t 0.79 \t 182.7 \t 0.38 \t 17.10 \n",
-      " M6 \t 0.78 \t 155.8 \t 0.37 \t 16.66 \n",
-      " MS4 \t 0.74 \t 234.8 \t 0.34 \t 8.26 \n",
-      " M4 \t 0.67 \t 332.2 \t 0.28 \t 6.81 \n",
-      " 2MN6 \t 0.57 \t 167.3 \t 0.20 \t 9.05 \n",
-      " 3MK7 \t 0.46 \t 52.1 \t 0.13 \t 6.34 \n",
-      " SN4 \t 0.42 \t 296.0 \t 0.11 \t 2.65 \n",
-      " M8 \t 0.33 \t 125.8 \t 0.07 \t 4.03 \n",
-      " OO1 \t 0.29 \t 238.4 \t 0.05 \t 0.44 \n",
-      " 2MK5 \t 0.24 \t 74.5 \t 0.04 \t 1.24 \n",
-      " 2SK5 \t 0.20 \t 172.1 \t 0.02 \t 0.85 \n"
+      "Name\tAmp\tPhase\tFreq\tPE\tSNR\t\n",
+      " K1\t7.27\t55.2\t0.0418\t32.37\t 275.53\t\n",
+      " MM\t4.29\t24.5\t0.0015\t11.26\t 8.58\t\n",
+      " S2\t4.14\t14.9\t0.0833\t10.48\t 81.73\t\n",
+      " M2\t4.03\t315.4\t0.0805\t9.94\t 77.41\t\n",
+      " NO1\t3.05\t112.9\t0.0403\t5.68\t 48.23\t\n",
+      " MSF\t2.44\t299.1\t0.0028\t3.65\t 2.78\t\n",
+      " SK3\t2.32\t319.1\t0.1251\t3.29\t 68.39\t\n",
+      " J1\t2.15\t307.8\t0.0433\t2.82\t 24.00\t\n",
+      " 2Q1\t1.97\t198.4\t0.0357\t2.37\t 20.16\t\n",
+      " L2\t1.90\t211.9\t0.0820\t2.21\t 17.14\t\n",
+      " UPS1\t1.82\t306.7\t0.0463\t2.03\t 17.28\t\n",
+      " N2\t1.80\t271.2\t0.0790\t1.98\t 15.38\t\n",
+      " Q1\t1.64\t45.6\t0.0372\t1.65\t 14.09\t\n",
+      " EPS2\t1.53\t288.8\t0.0762\t1.44\t 11.19\t\n",
+      " ETA2\t1.48\t331.0\t0.0851\t1.35\t 10.51\t\n",
+      " O1\t1.19\t260.2\t0.0387\t0.86\t 7.37\t\n",
+      " MK3\t1.14\t334.6\t0.1223\t0.80\t 16.64\t\n",
+      " S4\t1.10\t296.8\t0.1667\t0.73\t 18.01\t\n",
+      " 2SM6\t1.05\t177.5\t0.2472\t0.67\t 30.34\t\n",
+      " MN4\t1.00\t253.2\t0.1595\t0.62\t 15.09\t\n",
+      " MU2\t0.89\t300.4\t0.0777\t0.49\t 3.81\t\n",
+      " ALP1\t0.86\t230.2\t0.0344\t0.45\t 3.83\t\n",
+      " MO3\t0.85\t170.1\t0.1192\t0.44\t 9.25\t\n",
+      " M3\t0.83\t84.4\t0.1208\t0.42\t 8.74\t\n",
+      " 2MS6\t0.79\t182.7\t0.2444\t0.38\t 17.10\t\n",
+      " M6\t0.78\t155.8\t0.2415\t0.37\t 16.66\t\n",
+      " MS4\t0.74\t234.8\t0.1638\t0.34\t 8.26\t\n",
+      " M4\t0.67\t332.2\t0.1610\t0.28\t 6.81\t\n",
+      " 2MN6\t0.57\t167.3\t0.2400\t0.20\t 9.05\t\n",
+      " 3MK7\t0.46\t52.1\t0.2833\t0.13\t 6.34\t\n",
+      " SN4\t0.42\t296.0\t0.1623\t0.11\t 2.65\t\n",
+      " M8\t0.33\t125.8\t0.3220\t0.07\t 4.03\t\n",
+      " OO1\t0.29\t238.4\t0.0448\t0.05\t 0.44\t\n",
+      " 2MK5\t0.24\t74.5\t0.2028\t0.04\t 1.24\t\n",
+      " 2SK5\t0.20\t172.1\t0.2084\t0.02\t 0.85\t\n"
      ]
     }
    ],
@@ -363,6 +360,27 @@
     "             conf_int='linear',\n",
     "             Rayleigh_min=0.95,)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "9e9716f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['name', 'aux', 'nR', 'nNR', 'nI', 'rf', 'weights', 'A', 'g', 'mean', 'g_ci', 'A_ci', 'diagn', 'PE', 'SNR'])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coef.keys()"
+   ]
   }
  ],
  "metadata": {
@@ -381,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
